# pycmd2

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  pycmd2.common.rst  pycmd2.envs.rst  pycmd2.files.checksum.deps.rst  pycmd2.files.checksum.rst  pycmd2.files.rst  pycmd2.git.rst  pycmd2.images.rst  pycmd2.make.rst  pycmd2.network.rst  pycmd2.office.rst  pycmd2.pip.rst  pycmd2.rst  pycmd2.video.rst  requirements.txt  tutorial.rst
src/py_cmdtools/: __init__.py  cli.py
src/py_cmdtools/common/: gui.py
src/py_cmdtools/git/: gitp.py
src/py_cmdtools/llama/: llama_client.py  llama_quantize.py  llama_server.py
src/pycmd2/: __init__.py  cli.py
src/pycmd2/common/: cli.py  config.py  consts.py  gui.py  logger.py  settings.py
src/pycmd2/envs/: env_javascript.py  env_python.py  env_rust.py  envs_python.py
src/pycmd2/fileproc/: filedate.py  filelevel.py
src/pycmd2/files/: file_date.py  file_level.py  folder_back.py  folder_backup.py  folder_zip.py
src/pycmd2/files/checksum/: checksum.py
src/pycmd2/git/: git_add.py  git_clean.py  git_init.py  git_push_all.py  git_restart_tgitcache.py  gitp.py
src/pycmd2/images/: image_gray.py  image_to_pdf.py
src/pycmd2/llama/: llama_client.py  llama_quantize.py  llama_server.py
src/pycmd2/make/: make_python.py
src/pycmd2/network/: ssh_copy_id.py
src/pycmd2/office/: image_to_pdf.py  pdf_crypt.py  pdf_merge.py  pdf_split.py
src/pycmd2/office/docscan/tests/: test_indexer.py  test_reader.py
src/pycmd2/office/mindnote/: cli.py  connection.py  mainwindow.py  node.py
src/pycmd2/office/pedsheet/: resources_rc.py
src/pycmd2/office/pedsheet/dialog/: aboutdialog.py  finddialog.py  gotocelldialog.py
src/pycmd2/pip/: conf.py  pip_download.py  pip_download_req.py  pip_freeze.py  pip_install.py  pip_install_offline.py  pip_install_req.py  pip_reinstall.py  pip_uninstall.py  pip_uninstall_req.py
src/pycmd2/system/: which.py
src/pycmd2/task/: task_kill.py
src/pycmd2/video/: video_converter.py
tests/: __init__.py  conftest.py  test_config.py  test_files.py  test_git.py  test_image_to_pdf.py  test_pip.py  test_py_cmdtools.py  test_settings.py
tests/benchmarks/: test_config_benchmark.py
tests/files/: test_file_level.py
tests/fixtures/: cli.py  config.py  dirs.py
tests/git/: test_git_add.py  test_git_clean.py  test_git_init.py  test_git_push_all.py
tests/office/test_pdf_merge/: generate_test_pdfs.py  test_pdf_merge.py
(+7 files in other folders)
